# try-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_PROCESS.md  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  error.rs  main.rs  model.rs  score.rs  selector.rs  storage.rs  tui.rs  util.rs
