[package]
name = "try-cli"
version = "0.1.1"
edition = "2024"
authors = ["Dariusz Parys"]
description = "Lightweight, time-sensitive directory navigation for experiments — a fast way to jump between temporary project folders"
readme = "README.md"
homepage = "https://github.com/dariuszparys/try-rs"
repository = "https://github.com/dariuszparys/try-rs"
license = "MIT"
keywords = ["cli", "navigation", "directory", "productivity", "fuzzy-finder"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github", ".gitignore", "install.sh"]

[[bin]]
name = "try"
path = "src/main.rs"

[dependencies]
crossterm = "0.27"
dirs = "5.0"
unicode-width = "0.1"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
